base/config-reader-base-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: config-reader-base
  namespace: playground
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: config-volume
