base/config-reader-live-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: config-reader-live
  namespace: playground
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: config-reader
  template:
    metadata:
      annotations:
        rollout-restart-ts: "wewsfsde"
      labels:
        app: config-reader
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html
              readOnly: true
            - name: shared-volume
              mountPath: /usr/share/
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: stable-config
        - name: shared-volume
          configMap:
            name: shared-config
  strategy:
    canary:
      stableService: config-reader-stable
      canaryService: config-reader-canary
      steps:
        - setWeight: 0
        - pause: {}  # Manual promotion required
      trafficRouting:
        istio:
          virtualService:
            name: config-reader-virtual-service
            routes:
              - primary
